Fix Output Outline and Output Extended
Output has an outline or border and automatically breaks the text if the equation gets too long. Also, the number of decimal places has been extended from two to four.

I realized I was coding while zoomed in at 200% lmao'

--- a/index.css
+++ b/index.css
@@ -46,7 +46,15 @@ p{
 
 .output_row{
     outline: auto;
+    width: 100%;
+    margin: 2% 0%;
 }
+
+.output{
+    margin: 1% 0 1% 1.5%;
+    word-wrap: break-word;
+}
+
 .grid_table{
     width: 100%;
     display: flex;
